fdata_folder = 'LOADFDATA'
system_folder = 'SYSTEM'

modules_fireball_srcs = ['M_constants.f90', 'M_fdata.f90', 'M_system.f90']
fdata_srcs = [
  'make_munuDipX.f90',
  'make_munu.f90',
  'make_munuS.f90',
  'make_munuDipY.f90',
  'make_munuPP.f90',
  'read_1c.f90',
  'readheader_2c.f90',
  'readdata_2c.f90',
  'buildspline_1d.f90',
  'read_2c.f90',
  'read_3c.f90',
  'readdata_3c.f90',
  'readheader_3c.f90',
  'setterp_2d.f90',
  'load_fdata.f90',
]
system_srcs = [
  'kspace_gamma.f90',
  'kspace_double.f90',
  'smooth_inverse.f90',
  #'Dassemble_qmmm_dip.f90',
  #'Dassemble_qmmm.f90',
  'Dassemble_qmmm_dip_new.f90',
  'Dassemble_qmmm_new.f90',
  'getforces.f90',
  'Dassemble_2c.f90',
  'Dassemble_2c_PP.f90',
  'Dassemble_ca_olsxc_on.f90',
  'Dassemble_ca_olsxc_2c.f90',
  'Dassemble_ca_2c.f90',
  'Dassemble_ca_2c_dip.f90',
  'Dassemble_3c.f90',
  'Dassemble_3c_PP.f90',
  'Dassemble_ca_3c.f90',
  'Dassemble_ca_3c_dip.f90',
  'Dassemble_lr.f90',
  'Dassemble_lr_dip.f90',
  'Dassemble_ca_olsxc_3c.f90',
  'assemble_F.f90',
  'Dtrescentros.f90',
  'DtrescentrosS.f90',
  'deps3center.f90',
  'initamat.f90',
  'dipole_proyection.f90',
  'mulliken_charges.f90',
  'mulliken_dipole_charges.f90',
  'stationary_charges.f90',
  'lowdin_charges.f90',
  'neighbors.f90',
  'initboxes.f90',
  'allocate_system.f90',
  'anderson.f90',
  'mixer.f90',
  'fermie.f90',
  'denmat.f90',
  'build_rho.f90',
  'diag_k.f90',
  'scf_loop.f90',
  'get_ewald.f90',
  'assemble_usr.f90',
  'interpolate_1d.f90',
  'recoverC.f90',
  #'assemble_qmmm.f90',
  #'assemble_qmmm_dip.f90',
  'assemble_qmmm_new.f90',
  'assemble_qmmm_dip_new.f90',
  'assemble_mcweda.f90',
  'assemble_olsxc_1c.f90',
  'unocentros.f90',
  'assemble_olsxc_on.f90',
  'assemble_olsxc_off.f90',
  'average_ca_rho.f90',
  'assemble_ca_2c.f90',
  'assemble_ca_3c.f90',
  'assemble_lr.f90',
  'buildh.f90',
  'assemble_ca_3c_dip.f90',
  'assemble_lr_dip.f90',
  'assemble_3c.f90',
  'assemble_ca_2c_dip.f90',
  'assemble_sVNL.f90',
  'assemble_2c.f90',
  'assemble_2c_PP.f90',
  'assemble_3c_PP.f90',
  'initneighbors.f90',
  'num_neigh_tot.f90',
  'backnay.f90',
  'neighbors_pairs.f90',
  'common_neighbors.f90',
  'common_neighborsPP.f90',
  'assemble_olsxc_on.f90',
  'build_ca_olsxc_on.f90',
  'assemble_olsxc_off.f90',
  'epsilon.f90',
  'deps2cent.f90',
  'doscentros.f90',
  'doscentrosS.f90',
  'build_olsxc_off.f90',
  'average_ca_rho.f90',
  'trescentros.f90',
  'trescentrosS.f90',
  'smoother.f90',
  'doscentrosPP.f90',
  'doscentrosDipY.f90',
  'doscentrosDipX.f90',
  'cl_value.f90',
  'mpairnay.f90',
  'rotated.f90',
  'rotate.f90',
  'neighbors.f90',
  'neighborsPP.f90',
  'recover_S.f90',
  'recover_2c.f90',
  'interpolate_2d.f90',
  'recover_3c.f90',
  'doscentrosPP.f90',
  'recover_PP.f90',
  'rotatePP.f90',
  'twister.f90',
  'twisterd.f90',
  'chooser.f90',
  'chooserd.f90',
  'rotatedPP.f90',
  'makeDmatPP.f90',
  'makeDmat.f90',
  'recover_2cDipX.f90',
  'recover_2cDipY.f90',
  'doscentrosDipX.f90',
  'doscentrosDipY.f90',
  'cepal.f90',
  'geth.f90',
]

fireball_srcs = []
foreach src : modules_fireball_srcs
  fireball_srcs += src
endforeach
foreach src : fdata_srcs
  fireball_srcs += fdata_folder / src
endforeach
foreach src : system_srcs
  fireball_srcs += system_folder / src
endforeach

# Build fireball library
fireball_lib = static_library('fireball', fireball_srcs, dependencies: [blas_dep, lapack_dep])
fireball_dep = declare_dependency(link_with: fireball_lib, sources: fireball_srcs)
